<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TitleCollapsedTheme"
            app:contentScrim="@android:color/white"
            app:expandedTitleTextAppearance="@style/TitleTheme"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarChild"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:navigationIcon="@drawable/ic_back"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:id="@+id/tickerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_normal"
                android:rowCount="4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/latestPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="20sp"
                    tools:text="last price" />

                <TextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorSecondaryText"
                    tools:text="VOL: " />

                <TextView
                    android:id="@+id/low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorSecondaryText"
                    tools:text="LOW:" />

                <TextView
                    android:id="@+id/high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center_vertical|end"
                    android:textColor="@color/colorSecondaryText"
                    tools:text="HIGH:" />

                <TextView
                    android:id="@+id/change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center_vertical|end"
                    android:textColor="@color/colorSecondaryText"
                    tools:text="Change:" />
            </GridLayout>

            <GridLayout
                android:id="@+id/orderBookHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:orientation="horizontal"
                android:rowCount="3"
                app:layout_constraintBottom_toTopOf="@+id/list_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tickerLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_columnSpan="4"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/order_book_title"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Order Book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:background="@color/colorPrimaryLight"
                    android:gravity="center"
                    android:padding="@dimen/margin_small"
                    android:text="@string/bid_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:background="@color/colorAccentLight"
                    android:gravity="center"
                    android:padding="@dimen/margin_small"
                    android:text="@string/ask_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:background="@color/colorPrimaryLight"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/margin_normal"
                    android:text="@string/total_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:background="@color/colorPrimaryLight"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="@dimen/margin_normal"
                    android:text="@string/price_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:background="@color/colorAccentLight"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/margin_normal"
                    android:text="@string/price_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="3"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:background="@color/colorAccentLight"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="@dimen/margin_normal"
                    android:text="@string/total_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </GridLayout>

            <LinearLayout
                android:id="@+id/list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderBookHeader">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_book_bid_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryLight"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/order_book_bid_item" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_book_ask_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccentLight"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/order_book_ask_item" />

            </LinearLayout>

            <GridLayout
                android:id="@+id/tradesHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:columnCount="5"
                android:orientation="horizontal"
                android:rowCount="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_columnSpan="5"
                    android:padding="@dimen/margin_normal"
                    android:text="@string/trades_title"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:background="@color/colorSecondaryGrey"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_normal"
                    android:text="@string/time_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="2"
                    android:background="@color/colorSecondaryGrey"
                    android:gravity="center_vertical|end"
                    android:text="@string/price_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_columnWeight="2"
                    android:background="@color/colorSecondaryGrey"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="@dimen/margin_normal"
                    android:text="@string/amount"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </GridLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trades_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryGrey"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/trade_item" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>